--- a/apps/ledger-live-desktop/static/i18n/fr/app.json
+++ b/apps/ledger-live-desktop/static/i18n/fr/app.json
@@ -169,10 +169,7 @@
       "WITHDRAW" : "Retiré",
       "REVOKE" : "Révoqué",
       "ACTIVATE" : "Activé",
-      "REGISTER" : "Enregistré",
-      "STAKE" : "Staké",
-      "UNSTAKE" : "Déstaké",
-      "WITHDRAW_UNSTAKED" : "Retiré"
+      "REGISTER" : "Enregistré"
     }
   },
   "byteSize" : {
@@ -786,8 +783,8 @@
     "undelegating" : "Délégation interrompue",
     "availableBalanceTooltip" : "Ce montant est disponible.",
     "frozenAssetsTooltip" : "Les actifs gelés sont utilisés pour voter sur TRON. Cela représente votre nombre total de votes.",
-    "bandwidthTooltip" : "Geler des actifs pour gagner de la Bande passante",
-    "energyTooltip" : "Geler des actifs pour gagner de l’Énergie",
+    "bandwidthTooltip" : "Gelez des actifs pour gagner de la Bande passante.",
+    "energyTooltip" : "Gelez des actifs pour gagner de l’Énergie.",
     "delegatedTooltip" : "Les actifs délégués sont utilisés pour voter. Cela représente votre nombre total de votes.",
     "undelegatingTooltip" : "Les actifs dont la délégation est interrompue sont disponibles après {{timelockInDays}} jours.",
     "banner" : {
@@ -1244,9 +1241,9 @@
     }
   },
   "hideNftCollection" : {
-    "title" : "Cacher la collection de NFT",
+    "title" : "Masquer la collection de NFT",
     "desc" : "Vous vous apprêtez à cacher tous les NFT de la collection <1><0>{{collectionName}}</0></1>. Vous pouvez restaurer leur visibilité à tout moment à partir des <3>Paramètres</3>.",
-    "hideCTA" : "Cacher la collection de NFT"
+    "hideCTA" : "Masquer la collection de NFT"
   },
   "banners" : {
     "cleanCache" : {
@@ -1797,7 +1794,7 @@
       },
       "updatable" : {
         "title" : "Mise à jour disponible",
-        "title_plural" : "Mises à jours disponibles",
+        "title_plural" : "Mises à jour disponibles",
         "progressTitle" : "{{number}} mise à jour d’application",
         "progressTitle_plural" : "{{number}} mises à jour d’applications",
         "progressWarning" : "Ne sortez pas de My Ledger pendant la mise à jour.",
@@ -1811,7 +1808,7 @@
         "scheduled" : "En attente",
         "update" : "Mise à jour disponible",
         "updateAll" : "Tout mettre à jour",
-        "updateAllOutOfMemory" : "Espace de stockage insuffisant. Merci de désinstaller des applications",
+        "updateAllOutOfMemory" : "Espace de stockage insuffisant. Veuillez désinstaller des applications.",
         "install" : "Installer",
         "installed" : "Installée",
         "updated" : "Mise à jour",
@@ -2078,6 +2075,14 @@
           "dismiss" : "Pas maintenant",
           "stake" : "Staker avec {{provider}}"
         },
+        "ethereum" : {
+          "title" : "Faites fructifier vos ETH. Stakez maintenant.",
+          "description" : "Stakez vos ETH avec Lido et gagnez des récompenses quotidiennes. Pas de période de blocage. Pas de montant minimum.",
+          "kiln" : {
+            "title" : "Maximisez votre HODL. Faites fructifier vos ETH.",
+            "description" : "Vous avez plus de 32 ETH ? Gagnez des récompenses en toute sécurité en mettant vos ETH en staking avec Kiln."
+          }
+        },
         "cosmos" : {
           "title" : "Faites fructifier vos ATOM. Stakez avec le validateur Ledger.",
           "description" : "Stakez vos ATOM en toute confiance avec le validateur Ledger. Vous restez propriétaire de vos cryptos, tout en bénéficiant de la sécurité inégalée de Ledger."
@@ -2138,8 +2143,8 @@
         "ethereumGasPrice" : "Prix du gaz",
         "ethereumMaxFee" : "Frais maximaux ({{unitName}})",
         "ethereumPriorityFee" : "Frais de priorité maximaux ({{unitName}})",
-        "nextBlock" : "Bloc suivant",
-        "suggested" : "Suggérés",
+        "nextBlock" : "Bloc suivant : {{nextBaseFee}}",
+        "suggestedPriorityFee" : "Suggérés : {{lowPriorityFee}} - {{highPriorityFee}} {{unitName}}",
         "unitPerByte" : "{{unit}} par byte",
         "nft" : "NFT",
         "nftQuantity" : "Nombre"
@@ -3391,155 +3396,6 @@
       }
     }
   },
-  "ethereum" : {
-    "stake" : {
-      "title" : "Gagnez des ETH",
-      "lido" : {
-        "tag" : "Pas de minimum",
-        "description" : "Stakez vos ETH avec Lido et gagnez des récompenses quotidiennes. Pas de période de blocage. Pas de montant minimum."
-      },
-      "kiln" : {
-        "tag" : "32 ETH minimum",
-        "description" : "Vous avez plus de 32 ETH ? Gagnez chaque jour des récompenses en toute sécurité en mettant vos ETH en staking avec Kiln."
-      },
-      "providerTitle" : "Gagnez avec {{provider}}",
-      "providerLink" : "En savoir plus sur {{provider}}"
-    }
-  },
-  "near" : {
-    "account" : {
-      "stakedBalance" : "Solde de staking",
-      "stakedBalanceTooltip" : "Montant actuellement staké auprès de validateurs.",
-      "availableBalance" : "Solde pouvant être retiré",
-      "availableBalanceTooltip" : "Montant des actifs déstakés qui peuvent actuellement être retirés.",
-      "pendingBalance" : "Solde en attente",
-      "pendingBalanceTooltip" : "Montant des actifs déstakés qui seront bientôt disponibles.",
-      "storageUsageBalance" : "Solde minimum",
-      "storageUsageBalanceTooltip" : "Montant réservé pour le stockage et les transactions. Il constitue le solde minimum que votre compte doit contenir pour rester actif.",
-      "subHeader" : {
-        "cardTitle" : "Propulsé par Figment",
-        "moreInfo" : "Plus d’informations",
-        "drawerTitle" : "Propulsé par Figment",
-        "title" : "Le token NEAR désormais disponible sur Ledger Live",
-        "description" : "Vous pouvez maintenant gérer et sécuriser vos tokens NEAR via Ledger Live.",
-        "description2" : "Le token NEAR est natif de la chaîne NEAR. Vous pouvez l’utiliser pour réaliser des transactions, le staking et de nombreuses fonctionnalités à venir.",
-        "website" : "Propulsé par Figment"
-      }
-    },
-    "operationDetails" : {
-      "extra" : {
-        "stakedAmount" : "Montant en staking"
-      }
-    },
-    "stake" : {
-      "emptyState" : {
-        "description" : "Vous pouvez gagner des récompenses NEAR en stakant vos actifs.",
-        "info" : "Fonctionnement du staking",
-        "earnRewards" : "Gagner des récompenses"
-      },
-      "table" : {
-        "header" : "Position(s) de staking",
-        "stake" : "Ajouter",
-        "staked" : "Staké",
-        "pending" : "En attente de libération",
-        "available" : "Disponible au retrait"
-      },
-      "unstake" : "Déstaker",
-      "withdraw" : "Retirer",
-      "activeTooltip" : "Les montants stakés génèrent des récompenses.",
-      "inactiveTooltip" : "Les montants déstakés ne génèrent plus de récompenses.",
-      "commission" : "Commission",
-      "totalStake" : "Stake total",
-      "minSafeWarning" : "Fonds insuffisants",
-      "flow" : {
-        "title" : "Staker",
-        "steps" : {
-          "starter" : {
-            "description" : "Vous pouvez gagner des récompenses en stakant vos NEAR auprès d’un validateur.",
-            "bullet" : ["Vous gardez la propriété de vos actifs stakés.", "Stakez avec votre appareil Ledger.", "Vos actifs seront disponibles 52 à 65 heures après avoir été déstakés."],
-            "warning" : {
-              "description" : "Choisissez votre validateur avec soin : une partie de vos actifs stakés peut être perdue si le validateur ne respecte pas les règles."
-            }
-          },
-          "amount" : {
-            "title" : "Montant"
-          },
-          "validator" : {
-            "title" : "Validateurs",
-            "ledgerByFigmentTC" : "Conditions d’utilisation de Ledger by Figment"
-          },
-          "connectDevice" : {
-            "title" : "Appareil"
-          },
-          "confirmation" : {
-            "title" : "Confirmation",
-            "success" : {
-              "title" : "Actifs bien stakés",
-              "text" : "Le solde de votre compte sera mis à jour une fois que la blockchain aura confirmé la transaction.",
-              "cta" : "Voir les détails"
-            },
-            "broadcastError" : "Échec probable de votre transaction. Patientez un instant puis vérifiez l’historique des transactions avant de réessayer."
-          }
-        }
-      }
-    },
-    "unstake" : {
-      "disabledTooltip" : "Il n’y a pas assez d’actifs stakés à déstaker.",
-      "flow" : {
-        "title" : "Déstaker",
-        "steps" : {
-          "amount" : {
-            "title" : "Montant",
-            "subtitle" : "Le processus de déstaking est finalisé entre <0>52 à 65 heures</0>.",
-            "warning" : "Les récompenses seront immédiatement encaissées. Le montant déstaké sera disponible pour retrait après un <0>délai de 52 à 65 heures</0>.",
-            "fields" : {
-              "validator" : "Validateur",
-              "amount" : "Montant à déstaker"
-            }
-          },
-          "connectDevice" : {
-            "title" : "Appareil"
-          },
-          "confirmation" : {
-            "title" : "Confirmation",
-            "success" : {
-              "title" : "Actifs bien déstakés",
-              "description" : "<0>{{amount}}</0> ont été déstakés de <0>{{validator}}</0>.",
-              "cta" : "Voir les détails"
-            },
-            "broadcastError" : "Échec probable de votre transaction. Patientez un instant puis vérifiez l’historique des transactions avant de réessayer."
-          }
-        }
-      }
-    },
-    "withdraw" : {
-      "disabledTooltip" : "Il n’y a pas assez d’actifs à retirer.",
-      "flow" : {
-        "title" : "Retirer",
-        "steps" : {
-          "amount" : {
-            "title" : "Montant",
-            "fields" : {
-              "validator" : "Validateur",
-              "amount" : "Montant à retirer"
-            }
-          },
-          "connectDevice" : {
-            "title" : "Appareil"
-          },
-          "confirmation" : {
-            "title" : "Confirmation",
-            "success" : {
-              "title" : "Retrait des actifs effectué",
-              "description" : "<0>{{amount}}</0> ont été retirés de <0>{{validator}}</0>.",
-              "cta" : "Voir les détails"
-            },
-            "broadcastError" : "Échec probable de votre transaction. Patientez un instant puis vérifiez l’historique des transactions avant de réessayer."
-          }
-        }
-      }
-    }
-  },
   "delegation" : {
     "title" : "Gagner des récompenses",
     "header" : "Délégation",
@@ -3659,7 +3515,7 @@
       },
       "modal" : {
         "button" : "Terminé",
-        "title" : "Scanner pour exporter vers Ledger Live pour le mobile.",
+        "title" : "Scannez pour exporter vers Ledger Live mobile",
         "listTitle" : "Sur l’application Ledger Live pour le mobile :",
         "step1" : "Appuyez sur <highlight><icon>+</icon></highlight> dans <highlight>Comptes</highlight>.",
         "step2" : "Appuyez sur <highlight>Importer les comptes de l’ordinateur</highlight>.",
@@ -3749,6 +3605,10 @@
     "experimental" : {
       "disclaimer" : "Il s’agit de fonctionnalités expérimentales fournies \"telles quelles\" pour notre communauté de passionné(e)s de la tech. Elles peuvent changer, casser ou être retirées à tout moment. En les activant, vous acceptez de les utiliser en toute connaissance de cause.",
       "features" : {
+        "apiTrongridProxy" : {
+          "title" : "Utiliser TronGrid.io",
+          "description" : "Utilisez TronGrid sans proxy Ledger."
+        },
         "experimentalCurrencies" : {
           "title" : "Intégrations expérimentales",
           "description" : "Utilisez les intégrations expérimentales disponibles pour les crypto-actifs concernés."
@@ -3859,8 +3719,8 @@
         "count_plural" : "{{count}} tokens"
       },
       "hiddenNftCollections" : {
-        "title" : "Collections de NFT cachées",
-        "desc" : "Vous pouvez masquer des collections NFT en faisant un clic droit sur le nom de la collection et sélectionnant Cacher la collection de NFT.",
+        "title" : "Collections de NFT masquées",
+        "desc" : "Vous pouvez cacher des collections NFT en faisant un clic droit sur le nom de la collection et sélectionnant Masquer la collection de NFT.",
         "count" : "{{count}} collection",
         "count_plural" : "{{count}} collections"
       },
@@ -4652,9 +4512,6 @@
       "claimRewardCompound" : "validateur qui recevra les récompenses",
       "optIn" : "bénéficiaire",
       "nominate" : "validateur",
-      "stake" : "validateur",
-      "unstake" : "validateur",
-      "withdraw" : "validateur",
       "erc721" : {
         "transfer" : "bénéficiaire"
       },
@@ -5004,10 +4861,6 @@
     "NotEnoughGas" : {
       "title" : "Solde du compte parent insuffisant pour les frais de réseau"
     },
-    "OperatingSystemOutdated" : {
-      "title" : "Version de votre système d’exploitation obsolète",
-      "description" : "Veuillez mettre à jour votre système d’exploitation et essayez à nouveau. Pour comprendre pourquoi Ledger Live n’est pas pris en charge par la version actuelle de votre système d’exploitation, consultez l’article ci-dessous."
-    },
     "PasswordsDontMatch" : {
       "title" : "Mots de passe non identiques",
       "description" : "Veuillez réessayer."
@@ -5264,7 +5117,7 @@
       "description" : "Les transactions doivent être signées dans les 30 secondes. Veuillez réessayer."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Énergie inférieure à la quantité requise. Vous pourriez payer des frais allant jusqu’à 20 TRX."
+      "title" : "Vous n’avez pas assez d’Énergie pour envoyer ce token."
     },
     "PairingFailed" : {
       "title" : "Échec du couplage",
@@ -5415,9 +5268,6 @@
     "StellarSourceHasMultiSign" : {
       "title" : "Désactivez le multisig pour envoyer des transactions Stellar"
     },
-    "StellarBurnAddressError" : {
-      "title" : "Un problème est survenu lors de l’ajout du compte Stellar"
-    },
     "HederaAddAccountError" : {
       "title" : "Votre compte n’a pas été ajouté. Veuillez réessayer."
     },
@@ -5464,30 +5314,6 @@
     "ImageLoadRefusedOnDevice" : {
       "title" : "Chargement de l’image refusé sur votre Ledger (TODO: final wording)",
       "description" : "Si cette image ne vous plaît pas, choisissez une autre image."
-    },
-    "NearNewAccountWarning" : {
-      "title" : "Le compte du bénéficiaire n’a pas encore été créé. Pour le créer, le protocole nécessite un transfert de {{formattedNewAccountStorageCost}}."
-    },
-    "NearNewNamedAccountError" : {
-      "title" : "Le compte du bénéficiaire n’a pas encore été créé. Il doit être créé dans NEAR Wallet."
-    },
-    "NearActivationFeeNotCovered" : {
-      "title" : "Ce montant ne couvre pas le coût de stockage de {{formattedNewAccountStorageCost}}."
-    },
-    "NearUseAllAmountStakeWarning" : {
-      "title" : "Assurez-vous que votre solde disponible est suffisant pour couvrir vos futurs frais de transaction."
-    },
-    "NearNotEnoughStaked" : {
-      "title" : "Solde staké insuffisant"
-    },
-    "NearNotEnoughAvailable" : {
-      "title" : "Solde pouvant être retiré insuffisant"
-    },
-    "NearRecommendUnstake" : {
-      "title" : "Veuillez déstaker et retirer vos fonds avant de vider le compte."
-    },
-    "NearStakingThresholdNotMet" : {
-      "title" : "Le montant doit être d’au moins {{threshold}}"
     },
     "LockedDeviceError" : {
       "title" : "Appareil verrouillé",
