Removed count in hide CTA

--- a/apps/ledger-live-mobile/src/locales/en/common.json
+++ b/apps/ledger-live-mobile/src/locales/en/common.json
@@ -5997,8 +5997,8 @@
     "nftGallery": {
       "filters": {
         "selectAndHide": "Select and hide",
-        "hide": "Hide {{count}} collection",
-        "hide_plural": "Hide {{count}} collections",
+        "hide": "Hide collection",
+        "hide_plural": "Hide collections",
         "alertHide": "1 Collection hidden. Go to the settings to display and unhide it at any time",
         "alertHide_plural": "{{count}} Collections hidden. Go to the settings to display and unhide them at any time"
       },
