--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -607,7 +607,7 @@
     }
   },
   "stake": {
-    "modal": {
+    "no_funds_modal": {
       "title": "Buy, swap or receive",
       "text": "You do not have enough {{coin}} available to stake",
       "description": "Not enough funds? Don’t worry, you can securely buy, swap or receive crypto directly in Ledger Live.",
